<resources>
    <string name="app_name">Trip Planner</string>
    <string name="title_home">Home</string>
    <string name="title_todo">To Do List</string>
    <string name="title_book">Book</string>
    <string name="title_profile">Profile</string>
    <string name="title_expense">Expense Manager</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="dot">Date of Travel</string>
    <string name="nop">No. of Passengers</string>
    <string name="search">Search</string>
    <string name="city">City</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
