<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_book"
        android:icon="@drawable/baseline_event_black_24dp"
        android:title="@string/title_book" />

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/baseline_list_black_24dp"
        android:title="@string/title_todo" />

    <item
        android:id="@+id/navigation_expense"
        android:icon="@drawable/baseline_attach_money_black_24dp"
        android:title="@string/title_expense" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_account_circle_black_24dp"
        android:title="@string/title_profile" />

</menu>
